--- a/sass/core-layout.scss
+++ b/sass/core-layout.scss
@@ -1,6 +1,27 @@
 $breakpoint: 42em;
 $pad: 1em;
 
+// Responsive 2 equal-width columns
+.cols-AB {
+  display: grid;
+  // mobile-first single column
+  grid-template-columns: 1fr;
+  // breakpoint for larger screens to 2 columns of unequal width
+  @media (min-width: $breakpoint) {
+    grid-template-columns: 1fr 1fr;
+  }
+  column-gap: $pad;
+  padding: $pad 0;
+  // Disable top margin to avoid double margins in 2-column layout
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 0;
+  }
+}
+
 // Responsive 2 columns 1/3 on the left and 2/3 on the right
 .cols-ABB {
   display: grid;
