--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,19 +1,16 @@
+@import "colors";
+
 section.hero {
-  // width:100%;
   background-color: #d4e8f6;
   background-image: url("../images/FocusRetreat-topimage-1600.jpg");
   background-size: cover;
   background-position: center;
-  // padding-top: 16rem;
-  // padding-bottom: 16rem;
   text-align: center;
 
   img {
     width: unquote("min(450px, 95vw)");
-  //   height: auto;
   }
   h2 {
-    // color: green;
     margin-top: 40px;
     margin-bottom: 60px;
     background: rgba(255, 255, 255, 0.6);
@@ -22,4 +19,71 @@ section.hero {
     padding-bottom: 8px;
     /* text-shadow:0px 0px 10px #ffffff;*/
   }
+}
+
+.imagine {
+  h2 {
+    color: #01286e;
+  }
+}
+
+.bg-sage {
+  background-color: #a9a486;
+  color: #222;
+}
+
+.bg-green {
+  background-color: green;
+  color: yellow;
+}
+
+.bg-pine {
+  background-color: #344c2c;
+  color: white;
+}
+
+.bg-dark-blue {
+  background-color: $brand-dark-blue;
+  color: white;
+}
+
+.lightblue {
+  background-color: $brand-light-blue;
+  color: white;
+}
+.bg-honey {
+  background-color: #e7c082;
+  color: #222;
+}
+
+.callout-text {
+  text-align: center;
+  margin: 0;
+  padding: 3rem 0;
+  line-height: 1.1;
+}
+.bg-img-hills {
+  text-shadow: 0px 0px 10px #ffffff;
+  background: url("../images/hills2.jpg") rgba(255, 255, 255, 0.4);
+  background-size: cover;
+  background-blend-mode: screen;
+}
+
+.bg-img-forest {
+  color: white;
+  background: url("../images/background-pineforest.jpg") rgba(0, 33, 105, 0.2);
+  background-size: cover;
+  background-blend-mode: overlay;
+}
+
+.programs {
+  font-size: 150%;
+  line-height: 150%;
+  margin-bottom: 2em;
+}
+
+.social img {
+  width: 32px;
+  height: 32px;
+  vertical-align: middle;
 }
