--- a/sass/screen2.scss
+++ b/sass/screen2.scss
@@ -4,8 +4,9 @@
 @import "images";
 @import "fonts";
 @import "index";
-@import "frc";
 
+// This is necessary to prevent gaps between main > section
+// tags
 * {
   margin: 0;
   padding: 0;
@@ -13,6 +14,9 @@
 
 main > section {
   padding: 1em 1em;
+  ul {
+    padding-left: 1em;
+  }
 }
 
 main > section * {
@@ -20,6 +24,6 @@ main > section * {
 }
 
 p {
-  margin-top: 1.5em;
+  margin-bottom: 1.5em;
 }
 
