Important change for image width. Use max-width: 100%
Don't use vw or other units as it will cause overflow in grid and
horizontal scrolling

--- a/sass/core-layout.scss
+++ b/sass/core-layout.scss
@@ -61,6 +61,25 @@ $pad: 1em;
   }
 }
 
-img, video {
-  max-width: 95vw;
+// .cols-ABC {
+//   display: grid;
+//   align-items: center;
+//   justify-items: center;
+//   grid-template-columns: 100%;
+//   @media (min-width: $breakpoint) {
+//     grid-template-columns: repeat(3, 1fr);
+//   }
+//   column-gap: $pad;
+//   padding: $pad 0;
+//   h2,
+//   h3,
+//   h4,
+//   h5,
+//   h6 {
+//     margin-top: 0;
+//   }
+// }
+//
+img, video, svg {
+  max-width: 100%;
 }
