--- a/sass/screen2.scss
+++ b/sass/screen2.scss
@@ -5,25 +5,30 @@
 @import "fonts";
 @import "index";
 
-// This is necessary to prevent gaps between main > section
-// tags
-* {
-  margin: 0;
-  padding: 0;
-}
+// * {
+//   border: 1px solid red;
+// }
 
-main > section {
-  padding: 1em 1em;
-  ul {
-    padding-left: 1em;
+.brand-button {
+  display: inline-block;
+  padding: 0.5em;
+  margin-top: 1em;
+  border-radius: 8px;
+  color: white;
+  text-decoration: none;
+  font-weight: bolder;
+  box-shadow: 0px 10px 14px -7px #000000;
+  background-color: #ddae2c;
+  background: linear-gradient(to bottom, #ddae2c 5%, #925d0d 100%);
+  text-shadow: 0px 1px 0px #70441b;
+  border: 0px;
+  text-transform: none; /* override skeleton */
+  &:hover {
+    background: linear-gradient(to bottom, #925d0d 5%, #dec247 100%);
+    background-color: #925d0d;
+  }
+  &:active {
+    position: relative;
+    top: 1px;
   }
 }
-
-main > section * {
-  max-width: unquote("min(100%, 40rem)");
-}
-
-p {
-  margin-bottom: 1.5em;
-}
-
