--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,23 +1,50 @@
 @import "colors";
+@import "core-layout";
 
 section.hero {
+  padding: 1em 0;
   background-color: #d4e8f6;
   background-image: url("../images/FocusRetreat-topimage-1600.jpg");
   background-size: cover;
   background-position: center;
-  text-align: center;
 
   img {
     width: unquote("min(450px, 95vw)");
   }
+
   h2 {
     margin-top: 40px;
     margin-bottom: 60px;
     background: rgba(255, 255, 255, 0.6);
     line-height: 1.1;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    width: 100%;
+    text-align: center;
     /* text-shadow:0px 0px 10px #ffffff;*/
+  }
+}
+
+section.hosts {
+  img.hosts {
+    display: block;
+    @media (min-width: $breakpoint) {
+      display: inline;
+      float: right;
+      margin-left: 1em;
+      max-width: 50%;
+    }
+  }
+}
+
+section.about-our-center {
+  img {
+    display: block;
+    margin: auto;
+    @media (min-width: $breakpoint) {
+      display: inline;
+      float: right;
+      margin-left: 1em;
+      max-width: 50%;
+    }
   }
 }
 
@@ -25,6 +52,15 @@ section.hero {
   h2 {
     color: #01286e;
   }
+}
+
+.phone {
+  font-size: 150%;
+}
+
+.bg-brick {
+  background-color: #70441b;
+  color: white;
 }
 
 .bg-sage {
@@ -47,13 +83,18 @@ section.hero {
   color: white;
 }
 
-.lightblue {
+.bg-light-blue {
   background-color: $brand-light-blue;
   color: white;
 }
 .bg-honey {
   background-color: #e7c082;
   color: #222;
+}
+
+.bg-charcoal {
+  background: #515151;
+  color: white;
 }
 
 .callout-text {
@@ -76,14 +117,30 @@ section.hero {
   background-blend-mode: overlay;
 }
 
+.bg-img-sunset {
+  background: url("../images/sunset.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 18rem;
+}
+
 .programs {
   font-size: 150%;
   line-height: 150%;
   margin-bottom: 2em;
 }
 
-.social img {
-  width: 32px;
-  height: 32px;
-  vertical-align: middle;
+.social {
+  a,
+  a:visited,
+  a:hover {
+    color: white;
+    text-decoration: none;
+  }
+  img,
+  svg {
+    width: 32px;
+    height: 32px;
+    vertical-align: middle;
+  }
 }
