--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,16 @@
 {% extends "layout2.html" -%} {% block title -%} {{ config.extra.company_name }}
 {% endblock title -%} {% block main -%} {{ super() }}
 
-<section class="hero">
+<section class="grid hero">
   <img src="/images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" />
   <h2>{{ config.extra.tag_line }}</h2>
 </section>
 
-<section class="bg-dark-blue callout-text">
+<section class="grid bg-dark-blue callout-text">
   {{ load_data(path="copy/intro.md") | markdown | safe }}
 </section>
 
-<section class="imagine">
+<section class="grid imagine">
   <h2>Imagine how much you can achieve</h2>
   {{ load_data(path="copy/imagine.md") | markdown | safe }}
   <img
@@ -19,7 +19,7 @@
   />
 </section>
 
-<section class="bg-img-hills">
+<section class="grid bg-img-hills">
   <h2 id="program">2023 Retreat Programs</h2>
   <ul class="programs">
     <li><a href="/2023/programming/">Programming Retreats for 2023</a></li>
@@ -43,16 +43,19 @@
   </p>
 </section>
 
-<section class="callout-text bg-light-blue">
-  <div class="row">
-    <h3>{{ load_data(path="copy/grind.md") | markdown | safe }}</h3>
-  </div>
+<section class="grid callout-text bg-light-blue">
+  <h3>Get away from your daily grind, and accelerate your project or learning to the next level.</h3>
 </section>
 
-<section class="bg-dark-blue" id="about">
-  <div class="cols-AAB">
+<section class="hosts grid bg-dark-blue">
+  <div>
+    <img
+      class="hosts"
+      src="/images/photoshoot-202205/ck-pl-hex01-crop.jpg"
+      alt="Pete and Stella"
+    />
+    {{ load_data(path="copy/hosts.md") | markdown | safe }}
     <div class="social">
-      {{ load_data(path="copy/hosts.md") | markdown | safe }}
       <p>
         <a href="https://twitter.com/focusretreats" target="_blank">
           <img src="/images/twitter-icon.png" alt="twitter link" />
@@ -99,82 +102,75 @@
         >
       </p>
     </div>
-    <img
-      src="/images/photoshoot-202205/ck-pl-hex01-crop.jpg"
-      style="width: 100%"
-      alt="Pete and Stella"
-    />
   </div>
 </section>
 
-<section class="bg-img-forest">
+<section class="grid bg-img-forest">
   {{ load_data(path="copy/experience.md") | markdown | safe }}
 </section>
 
-<section class="bg-img-hills" id="place">
-  <div class="cols-ABB">
-    <div>
-      {{ load_data(path="copy/about-our-center.md") | markdown | safe }}
-    </div>
-    <img
-      src="/images/frc-building-side.jpg"
-      style="width: 100%"
-      alt="{{ config.extra.company_name }} Building"
-    />
-  </div>
+<section class="grid about-our-center grid bg-img-hills">
+  <div>
+  <img
+    src="/images/frc-building-side.jpg"
+    alt="{{ config.extra.company_name }} Building"
+  />
+  {{ load_data(path="copy/about-our-center.md") | markdown | safe }}
+  <div>
 </section>
 
-<section class="bg-pine" id="offer">
+<section class="grid bg-pine" id="offer">
   <div class="cols-AB">
     <img
       src="/images/frc-building-rear.jpg"
-      style="width: 100%"
       alt="Our Building, rear view with lot"
     />
     <div>{{ load_data(path="copy/what-we-offer.md") | markdown | safe }}</div>
   </div>
 </section>
 
-<section class="bg-honey">
-  <div class="cols-AB">
+<section class="grid bg-honey">
     <div>{{ load_data(path="copy/amenities.md") | markdown | safe }}</div>
     <img
       src="/images/coffee-and-rolls.jpg"
-      style="width: 100%; margin-top: 15px"
       alt="Fresh baked goods and coffee"
     />
-  </div>
 </section>
 
-<section class="bg-sage">
+<section class="grid bg-sage">
   {{ load_data(path="copy/what-we-dont-offer.md") | markdown | safe }}
 </section>
+
 <section class="gallery">
-  <img src="/images/gallery/boating2.jpg" alt="" />
-  <img src="/images/gallery/hike-selfie.jpg" alt="" />
-  <img src="/images/gallery/mountaintop.jpg" alt="" />
-  <img src="/images/gallery/mountain-lake.jpg" alt="" />
-  <img src="/images/gallery/pie.jpg" alt="" />
-  <img src="/images/gallery/river.jpg" alt="" />
+  <img src="/images/gallery/boating2.jpg" alt="Pete and Stella selfie on a lake" />
+  <img src="/images/gallery/hike-selfie.jpg" alt="hiking selfie">
+  <img src="/images/gallery/mountaintop.jpg" alt="mountaintop">
+  <img src="/images/gallery/mountain-lake.jpg" alt="mountain and lake">
+  <img src="/images/gallery/pie.jpg" alt="pie">
+  <img src="/images/gallery/river.jpg" alt="river">
 </section>
-<section>
-  <h1>Heading One</h1>
-  <p>some text here</p>
-  <h2>Heading Two</h2>
-  <p>some text here</p>
-  <h3>Heading Three</h3>
-  <p>some text here</p>
-  <h4>Heading Four</h4>
-  <p>some text here</p>
-  <h5>Heading Five</h5>
-  <p>some text here</p>
-  <h6>Heading Six</h6>
-  <p>some text here</p>
+
+<section class="grid">{% include "mailchimp.html" %}</section>
+
+<section class="grid bg-img-sunset"></section>
+
+<section class="grid bg-charcoal" id="pricing">
+  <h2>More Info</h2>
+  <a class="phone" href="tel:+15183108879">518-310-8879</a>
+  <a
+    class="brand-button"
+    href="mailto:info@focusretreatcenter.com?subject=Website Retreat Inquiry"
+    >Contact us for more info</a
+  >
 </section>
-<section class="bg-dark-blue">
-  {{ load_data(path="copy/imagine.md") | markdown | safe }}
-</section>
-<section class="bg-green">
-  {{ load_data(path="copy/hosts.md") | markdown | safe }}
+
+<section class="grid bg-brick" id="signin">
+  <h2>Need to...?</h2>
+  <ul>
+    <li>Make a payment</li>
+    <li>Set up automatic payments</li>
+    <li>Update your profile</li>
+  </ul>
+  <a class="brand-button" href="/signin">Sign In</a>
 </section>
 {% endblock -%}
