--- a/templates/index.html
+++ b/templates/index.html
@@ -150,11 +150,9 @@
   <img src="/images/gallery/river.jpg" alt="river">
 </section>
 
-<section class="grid">{% include "mailchimp.html" %}</section>
+<section class="grid bg-honey">{% include "mailchimp.html" %}</section>
 
-<section class="grid bg-img-sunset"></section>
-
-<section class="grid bg-charcoal" id="pricing">
+<section class="grid bg-light-blue">
   <h2>More Info</h2>
   <a class="phone" href="tel:+15183108879">518-310-8879</a>
   <a
@@ -164,7 +162,7 @@
   >
 </section>
 
-<section class="grid bg-brick" id="signin">
+<section class="grid bg-dark-blue" id="signin">
   <h2>Need to...?</h2>
   <ul>
     <li>Make a payment</li>
@@ -173,4 +171,6 @@
   </ul>
   <a class="brand-button" href="/signin">Sign In</a>
 </section>
+
+<section class="grid bg-img-sunset"></section>
 {% endblock -%}
