--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,6 +1,6 @@
 <a href="/#intro" onclick="closeNav()">Introduction</a>
-<a href="/#about" onclick="closeNav()">About Us</a>
-<a href="/#place" onclick="closeNav()">Our Center</a>
+<a href="/#hosts" onclick="closeNav()">About Us</a>
+<a href="/#center" onclick="closeNav()">Our Center</a>
 <a href="/#program" onclick="closeNav()">The Program</a>
 <a href="/photos" onclick="closeNav()">Photos</a>
 <a href="/signin" onclick="closeNav()">Sign In</a>
