--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,11 +1,5 @@
 // Primary page layout is a single column with content centered horizontally.
-// It is mobile-first and as screen size allows, additional columns are introduced side by side
-// This is necessary to prevent gaps between main > section
-// tags
-* {
-  margin: 0;
-  padding: 0;
-}
+// It is mobile-first and as screen size allows additional columns are introduced side by side
 
 p {
   margin-bottom: 1.5em;
@@ -19,6 +13,7 @@ footer.grid {
   justify-items: center;
   padding: 1em 1em;
   ul {
+    // Necessary because list bullets are laid out weird
     padding-left: 1em;
   }
   // I don't like this but it's necessary to keep stuff like
