--- a/templates/index.html
+++ b/templates/index.html
@@ -172,5 +172,5 @@
   <a class="brand-button" href="/signin">Sign In</a>
 </section>
 
-<section class="grid bg-img-sunset"></section>
+<section class="bg-img-sunset"></section>
 {% endblock -%}
