--- a/sass/index.scss
+++ b/sass/index.scss
@@ -28,7 +28,7 @@ section.hero {
     line-height: 1.1;
     width: 100%;
     text-align: center;
-    /* text-shadow:0px 0px 10px #ffffff;*/
+    padding: 0.2em;
   }
 }
 
