--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -1,6 +1,50 @@
+@import "core-layout";
+@import "colors";
+
+.open-nav  {
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin-right: 5px;
+  border: none;
+  font-size: 48px;
+  background: transparent;
+  line-height: 0.8em;
+  text-decoration: none;
+  color: black;
+  &:visited {
+    color: black;
+  }
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+// nav.full {
+//   @include top-right;
+//   display: none;
+//   height: 100vh;
+//   width: 100vw;
+//   grid-template-columns: 1fr;
+//   justify-items: center;
+//   background-color: $brand-light-blue;
+//
+//   button.close-nav {
+//     @include top-right;
+//   }
+//
+//   a {
+//     text-decoration: none;
+//   }
+//
+//   &.open {
+//     display: grid;
+//   }
+// }
+//
 footer {
   display: grid;
-  grid-template-columns:1fr;
+  grid-template-columns: 1fr;
 
   img.logo-inline {
     max-width: calc(min(300px, 95vw));
