--- a/templates/shortcodes/survey2023.html
+++ b/templates/shortcodes/survey2023.html
@@ -1,1 +1,1 @@
-<a class="button button-primary myButton" href="https://us14.list-manage.com/survey?u=a54483dfc73731ced2ff35a04&id=535dbf9df4&attribution=false">Fill Out Retreat Program Survey</a>
+<a class="button brand-button" href="https://us14.list-manage.com/survey?u=a54483dfc73731ced2ff35a04&id=535dbf9df4&attribution=false">Fill Out Retreat Program Survey</a>
