Bring over remaining layout markup

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
  
-  <link rel="stylesheet" href="/screen2.css">
+  <link rel="stylesheet" href="/screen.css">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
