--- a/sass/team.scss
+++ b/sass/team.scss
@@ -1,13 +1,19 @@
 @import "colors";
+@import "core-layout";
 .team-member {
   h2 {
-    font-size: 3rem;
     color: $brand-dark-blue; 
   }
 
   h3 {
     color: $brand-charcoal-grey;
-    font-size: 2.5rem;
     line-height: 80%;
+  }
+  &.pete img, &.percy img {
+    @include float(left);
+  }
+
+  &.stella img {
+    @include float(right);
   }
 }
