Fix zola autoreload script injection

--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -113,6 +113,6 @@
       <nav>{% include "partials/nav.html" -%}</nav>
       {% endblock -%}
     </footer>
-    <script type="text/javascript" src="/navigation.js" />
+    <script type="text/javascript" src="/navigation.js"></script>
   </body>
 </html>
