--- a/sass/index.scss
+++ b/sass/index.scss
@@ -118,9 +118,11 @@ section.bg-img-sunset {
 }
 
 .programs {
-  font-size: 150%;
-  line-height: 150%;
-  margin-bottom: 2em;
+  margin: 0;
+  li {
+    line-height:2.5em; 
+    display: block;
+  }
 }
 
 .social {
